<resources>
    <string name="app_name">Pocket MAL</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading</string>
    <string name="tryAgain">Retry</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="defaultValue">Default</string>
    <string name="unknown">Unknown</string>
    <string name="updating">Updating</string>
    <string name="notAvailableOffline">This action isn\'t available in offline mode</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="loginFailed">Login failed. Please check your connection or try again later&#8230;</string>
    <string name="loginBadRequest">Something went horribly wrong, please retype your credentials or try to login on the website</string>
    <string name="wrongCredentials">The username or password you entered was incorrect</string>
    <string name="wrongCredentialsNotAllowedSymbols">The username or password you entered was incorrect\n\nWarning\n\nYour password contains not allowed symbols \"&lt;\" or \":\", most likely it\'s the reason why you cannot log into the app. For more details check MAL forum\nhttps://myanimelist.net/forum/?topicid=1423799</string>
    <string name="login__empty_username">Username must not be empty</string>
    <string name="login__empty_password">Password must not be empty</string>
    <string name="login__banned_ip">Too many failed login attempts, this IP is blocked for a couple of hours.\n\nPlease try again later.\n\nThis is myanimelist.net limitation, for more details check MAL forum\nhttps://myanimelist.net/forum/?topicid=1632480</string>
    <string name="login__captcha">Website login required.\n\nDue to security reasons MAL requires you to enter a captcha, please open myanimelist.net website on your mobile web browser and login/relogin there. After that try to login in Pocket MAL again.</string>
    <string name="login__no_internet_connection">Unable to load the login page\nplease check your Internet connection</string>
    <string name="login__refresh">Refresh</string>
    <string name="login__login_failure">Failed to log you in, please restart the app or try again later</string>
    <string name="none">None</string>
    <string name="general__banned_ip">Too many failed login attempts were done before, this IP is blocked for a couple of hours.\n\nPlease try again later.</string>
    <string name="general__captcha">Website login required.\n\nPlease open myanimelist.net website on your mobile web browser and login/relogin there.</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="onHold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="planToWatch">Plan to Watch</string>
    <string name="reading">Reading</string>
    <string name="planToRead">Plan to Read</string>
    <string name="planned">Planned</string>
    <string name="airing">Airing</string>
    <string name="notYetAired">Not Yet Aired</string>
    <string name="publishing">Publishing</string>
    <string name="notYetPublished">Not Yet Published</string>
    <string name="finished">Finished</string>
    <string name="tv">TV</string>
    <string name="ova">OVA</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="ona">ONA</string>
    <string name="musical">Music</string>
    <string name="manga">Manga</string>
    <string name="novel">Novel</string>
    <string name="oneShot">One Shot</string>
    <string name="doujinshi">Doujinshi</string>
    <string name="manhwa">Manhwa</string>
    <string name="manhua">Manhua</string>
    <string name="oel">OEL</string>
    <string name="anime">Anime</string>
    <string name="noScore">— / No Score</string>
    <string name="score10">10 / Masterpiece</string>
    <string name="score9">9  / Great</string>
    <string name="score8">8  / Very Good</string>
    <string name="score7">7  / Good</string>
    <string name="score6">6  / Fine</string>
    <string name="score5">5  / Average</string>
    <string name="score4">4  / Bad</string>
    <string name="score3">3  / Very Bad</string>
    <string name="score2">2  / Horrible</string>
    <string name="score1">1  / Appalling</string>
    <string name="plusOne">+1</string>
    <string name="plusOneChapter">+1C</string>
    <string name="plusOneVolume">+1V</string>
    <string name="syncFailed">Unable to synchronize your list, please check your Internet connection</string>
    <string name="syncFailedTimeout">Timeout, please check if <u>myanimelist.net</u> is available</string>
    <string name="syncFailedMalDown">Looks like <u>myanimelist.net</u> is down, please check the website</string>
    <string name="updateFailed">Unable to update this title, check your connection or try again later&#8230;</string>
    <string name="updateUnsynchFailed">Unable to update this title, please resynchronize your list&#8230;</string>
    <string name="removingFailed">Unable to remove this title, check your connection or try again later&#8230;</string>
    <string name="addingFailed">Unable to add this title, check your connection or try again later&#8230;</string>
    <string name="removingConfirmation">Do you really want to remove this title from your list?</string>
    <string name="getListFailed">Unable to retrieve your list, check your connection or try again later&#8230;</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="someListIsEmpty">Your \"%s\" list is empty</string>
    <string name="sorting">Sorting</string>
    <string name="title">Title</string>
    <string name="progress">Progress</string>
    <string name="reverse">Reverse</string>
    <string name="lastUpdated">Last Updated</string>
    <string name="synchronization">Synchronization</string>
    <string name="lastSynchronized">Synchronized %s</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="scoreList">Score: %s</string>
    <string name="typeList">Type: %s</string>
    <string name="tagsInList"><![CDATA["Tags: <i>%s</i>"]]></string>
    <string name="unableToParseLink">Unable to parse this link</string>
    <string name="shareAnimeListText">My anime list - https://myanimelist.net/animelist/%s</string>
    <string name="shareMangeListText">My manga list - https://myanimelist.net/mangalist/%s</string>
    <string name="rightSwipeTip">Swipe to the right to open the main menu</string>
    <string name="filterTip">Swipe down to refresh the list</string>
    <string name="longClickTip">Long click on the list item to show the \"+1\" button</string>
    <string name="clickTip">Click on the episodes label to show the \"+1\" button</string>
    <string name="attention">Attention</string>
    <string name="hentaiFtue">In Upcoming, Airing and Just Added lists you may descry some hentai titles with NSFW posters. The app provides you with a hentai filter for these lists, do you want to activate it?</string>
    <string name="hentaiFtueAdditional">(you always can switch the filter in \"Settings\")</string>
    <string name="addToMyList">Add to my list</string>
    <string name="tagsLabel">Tags</string>
    <string name="editTags">No tags</string>
    <string name="type">Type</string>
    <string name="episodes">Episodes</string>
    <string name="chapters">Chapters</string>
    <string name="volumes">Volumes</string>
    <string name="status">Status</string>
    <string name="aired">Aired</string>
    <string name="published">Published</string>
    <string name="score">Score</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="genres">Genres</string>
    <string name="premiered">Premiered</string>
    <string name="broadcast">Broadcast</string>
    <string name="producers">Producers</string>
    <string name="licensors">Licensors</string>
    <string name="studios">Studios</string>
    <string name="source">Source</string>
    <string name="dateNotAvailable">Not available</string>
    <string name="adding">Adding</string>
    <string name="removing">Removing</string>
    <string name="detailsLoadingFail">Unable to get title\'s details, check your connection or try again later&#8230;</string>
    <string name="goToWebsiteAnime"><u>View details on MAL</u></string>
    <string name="removeTitleFromList">Remove from list</string>
    <string name="editDetails">Edit Details</string>
    <string name="rateTitle">Rate this title</string>
    <string name="about">About</string>
    <string name="watchingPeriod">Watching Period</string>
    <string name="startDate">Start Date</string>
    <string name="finishDate">Finish Date</string>
    <string name="questionMark">\?</string>
    <string name="search">Search</string>
    <string name="recent__share">Share</string>
    <string name="recent__copy_to_clipboard">Copy to clipboard</string>
    <string name="recent__rss_link">RSS Link</string>
    <string name="settings__settings">Settings</string>
    <string name="settings__list_section">List</string>
    <string name="settings__auto_sync">Auto Synchronization</string>
    <string name="settings__auto_sync_description">Synchronize your list when the application starts</string>
    <string name="settings__default_list">Default List</string>
    <string name="settings__default_list_description">Preferred list to be shown when the application starts</string>
    <string name="settings__view">View</string>
    <string name="settings__theme">Theme</string>
    <string name="settings__theme_description">Choose light, dark or black theme</string>
    <string name="settings__simple_view">Simple View</string>
    <string name="settings__simple_view_description">Don\'t show posters in list</string>
    <string name="settings__simple_external_browser">External Browser</string>
    <string name="settings__simple_external_browser_description">Use external browser to open links</string>
    <string name="settings__show_tags">Display Tags</string>
    <string name="settings__show_tags_description">Displaying your tags in list</string>
    <string name="settings__save_sorting_state">Save Sorting State</string>
    <string name="settings__save_sorting_state_description">Don\'t lose sorting state when app is closing</string>
    <string name="settings__english_titles_description">Show English titles if available</string>
    <string name="settings__english_titles">English Titles</string>
    <string name="settings__action_popup_section">Action Popup</string>
    <string name="settings__action_popup">Action Popup</string>
    <string name="settings__action_popup_description">Show Action Popup when certain actions are performed</string>
    <string name="settings__action_popup_options">Action Popup Settings</string>
    <string name="settings__action_popup_options_description">Choose when the Action Popup appears</string>
    <string name="settings__hentai_filter">NSFW content</string>
    <string name="settings__hentai_filter_your_list">Your List</string>
    <string name="settings__hentai_filter_your_list_description">Display NSFW content in your list</string>
    <string name="settings__hentai_filter_browse">Browse / Search</string>
    <string name="settings__hentai_filter_browse_description">Display NSFW content in Browse section and Search results</string>
    <string name="rewatchingTip">* - this number should NOT include the first time you completed this series</string>
    <string name="help">Help</string>
</resources>