<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings__list_section">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@null"
            android:key="autoSynch"
            android:summary="@string/settings__auto_sync_description"
            android:title="@string/settings__auto_sync" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/defaultListArray"
            android:entryValues="@array/defaultListValues"
            android:icon="@null"
            android:key="defaultList"
            android:summary="@string/settings__default_list_description"
            android:title="@string/settings__default_list" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="saveSortingState"
            android:summary="@string/settings__save_sorting_state_description"
            android:title="@string/settings__save_sorting_state" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="tagsInListVisibility"
            android:summary="@string/settings__show_tags_description"
            android:title="@string/settings__show_tags" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="simpleView"
            android:summary="@string/settings__simple_view_description"
            android:title="@string/settings__simple_view" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings__view">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/themesArray"
            android:entryValues="@array/themesValues"
            android:icon="@null"
            android:key="theme"
            android:summary="@string/settings__theme_description"
            android:title="@string/settings__theme" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="englishTitles"
            android:summary="@string/settings__english_titles_description"
            android:title="@string/settings__english_titles" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="externalBrowser"
            android:summary="@string/settings__simple_external_browser_description"
            android:title="@string/settings__simple_external_browser" />
        <Preference
            android:key="externalLinks"
            android:summary="Choose how you want to open links"
            android:title="External links" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings__action_popup_section">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@null"
            android:key="actionPopup"
            android:summary="@string/settings__action_popup_description"
            android:title="@string/settings__action_popup" />

        <Preference
            android:key="textPatterns"
            android:summary="Manage predefined sharing text"
            android:title="Text Patterns" />

        <com.g.pocketmal.ui.legacy.widget.MultiSelectListPreference
            android:defaultValue="1|2|3"
            android:entries="@array/popupCasesArray"
            android:entryValues="@array/popupCasesValues"
            android:icon="@null"
            android:key="actionPopupOptions"
            android:summary="@string/settings__action_popup_options_description"
            android:title="@string/settings__action_popup_options" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings__hentai_filter">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@null"
            android:key="hentaiFilterList"
            android:summary="@string/settings__hentai_filter_your_list_description"
            android:title="@string/settings__hentai_filter_your_list" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@null"
            android:key="hentaiFilter"
            android:summary="@string/settings__hentai_filter_browse_description"
            android:title="@string/settings__hentai_filter_browse" />
    </PreferenceCategory>
</PreferenceScreen>
