<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_sync_24"
        app:showAsAction="never"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_sort"
        app:showAsAction="never"
        android:title="@string/sort" />

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/settings__settings" />

    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:title="@string/about" />
</menu>
