<?xml version="1.0" encoding="utf-8"?>
<com.g.pocketmal.ui.widget.BorderCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="?attr/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:elevation="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/DialogHeader"
                    android:text="@string/sorting" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_last_updated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lastUpdated"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                </RadioGroup>

                <CheckBox
                    android:id="@+id/cb_reverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/reverse"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel_button"
                    style="@style/DialogButton"
                    android:text="@string/cancel" />

                <TextView
                    android:id="@+id/tv_sort_button"
                    style="@style/DialogButton"
                    android:text="@string/sort" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.g.pocketmal.ui.widget.BorderCardView>
