<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="24dp">

    <TextView
        style="@style/DialogHeader"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/recent__rss_link" />

    <TextView
        android:id="@+id/tv_dialog_text"
        style="@style/DialogText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_share_button"
            style="@style/VerticalButton"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/recent__share" />

        <TextView
            android:id="@+id/tv_copy_button"
            style="@style/VerticalButton"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/recent__copy_to_clipboard" />

        <TextView
            android:id="@+id/tv_cancel_button"
            style="@style/VerticalButton"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>