<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="24dp">

    <EditText
        android:id="@+id/et_tag_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:hint="@string/tagsLabel"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="7"
        android:maxLines="10"
        android:minHeight="120dp"
        android:minLines="5"
        android:singleLine="false"
        android:textColor="@color/text_regular"
        android:textColorHint="#AAAAAA"
        android:textCursorDrawable="@null"
        android:theme="@style/EditField" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_cancel_button"
            style="@style/DialogButton"
            android:layout_toLeftOf="@+id/tv_save_button"
            android:layout_toStartOf="@+id/tv_save_button"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_save_button"
            style="@style/DialogButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/save" />

        <TextView
            android:id="@+id/tv_clear_button"
            style="@style/DialogButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/clear" />
    </RelativeLayout>

</LinearLayout>