<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="8dp">

    <TextView
        style="@style/DialogHeader"
        android:id="@+id/dialogHeader" />

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/tv_rewatching_times_label"
            android:textColor="@color/text_regular"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            style="@style/PopupInput"
            android:id="@+id/et_rewatching_times_input"
            android:layout_toRightOf="@+id/tv_rewatching_times_label"
            android:layout_toEndOf="@+id/tv_rewatching_times_label"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_color_secondary"
            android:gravity="end"
            android:hint="@string/questionMark" />

    </RelativeLayout>

    <TextView
        android:textColor="@color/text_regular"
        android:textSize="12sp"
        android:text="@string/rewatchingTip"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end">

        <TextView
            style="@style/DialogButton"
            android:layout_marginBottom="0dp"
            android:id="@+id/tv_ok_button"
            android:gravity="end|center_vertical"
            android:text="@string/ok" />

        <TextView
            style="@style/DialogButton"
            android:id="@+id/tv_help_button"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="end|center_vertical"
            android:text="@string/help" />

        <TextView
            style="@style/DialogButton"
            android:gravity="end|center_vertical"
            android:id="@+id/tv_cancel_button"
            android:layout_marginTop="0dp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>