<?xml version="1.0" encoding="utf-8"?>
<com.g.pocketmal.ui.legacy.widget.BorderCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="?attr/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <TextView
            style="@style/DialogHeader"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/rateTitle" />

        <NumberPicker
            android:id="@+id/np_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:descendantFocusability="blocksDescendants" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_button"
                style="@style/DialogButton"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tv_ok_button"
                style="@style/DialogButton"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</com.g.pocketmal.ui.legacy.widget.BorderCardView>
