<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_edit_details">

    <TextView
        android:id="@+id/tv_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/watchingPeriod"
        android:textColor="?android:textColorSecondary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/startDate" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableTint="?android:textColorPrimary"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical|start"
            android:padding="10dp"
            android:textAllCaps="true"
            tools:text="JAN 1, 2016" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/finishDate" />

        <TextView
            android:id="@+id/tv_finish_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableTint="?android:textColorPrimary"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical|start"
            android:padding="10dp"
            android:textAllCaps="true"
            tools:text="FEB 13, 2016" />
    </RelativeLayout>
</LinearLayout>